--- a/BChessMac/Base.lproj/Main.storyboard
+++ b/BChessMac/Base.lproj/Main.storyboard
@@ -702,18 +702,44 @@
             </objects>
             <point key="canvasLocation" x="75" y="116"/>
         </scene>
-        <!--View Controller-->
+        <!--Chess View Controller-->
         <scene sceneID="hIz-AP-VOD">
             <objects>
-                <viewController id="XfG-lQ-9wD" customClass="ViewController" customModule="BChessMac" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" wantsLayer="YES" id="m2S-Jp-Qdl" customClass="ChessView" customModule="BChessMac" customModuleProvider="target">
-                        <rect key="frame" x="0.0" y="0.0" width="480" height="270"/>
+                <viewController id="XfG-lQ-9wD" customClass="ChessViewController" customModule="BChessMac" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" wantsLayer="YES" id="m2S-Jp-Qdl">
+                        <rect key="frame" x="0.0" y="0.0" width="591" height="341"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <subviews>
+                            <customView translatesAutoresizingMaskIntoConstraints="NO" id="Q8S-Oy-e6A" customClass="ChessView" customModule="BChessMac" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="17" width="591" height="324"/>
+                            </customView>
+                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" textCompletion="NO" translatesAutoresizingMaskIntoConstraints="NO" id="icQ-Uj-SKX">
+                                <rect key="frame" x="-2" y="0.0" width="595" height="17"/>
+                                <textFieldCell key="cell" lineBreakMode="truncatingTail" allowsUndo="NO" sendsActionOnEndEditing="YES" title="Ready" id="OFN-5h-BpI">
+                                    <font key="font" metaFont="system"/>
+                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                                </textFieldCell>
+                            </textField>
+                        </subviews>
+                        <constraints>
+                            <constraint firstItem="Q8S-Oy-e6A" firstAttribute="top" secondItem="m2S-Jp-Qdl" secondAttribute="top" id="4KM-Ef-eFS"/>
+                            <constraint firstAttribute="trailing" secondItem="Q8S-Oy-e6A" secondAttribute="trailing" id="D9G-dv-fjm"/>
+                            <constraint firstItem="Q8S-Oy-e6A" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" id="Ibt-Sm-Ypk"/>
+                            <constraint firstItem="icQ-Uj-SKX" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" id="UqJ-NW-UfW"/>
+                            <constraint firstItem="icQ-Uj-SKX" firstAttribute="top" secondItem="Q8S-Oy-e6A" secondAttribute="bottom" id="g7H-Ff-wHA"/>
+                            <constraint firstAttribute="bottom" secondItem="icQ-Uj-SKX" secondAttribute="bottom" id="sbn-kp-jZm"/>
+                            <constraint firstAttribute="trailing" secondItem="icQ-Uj-SKX" secondAttribute="trailing" id="yJW-oZ-lhG"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="chessView" destination="Q8S-Oy-e6A" id="sQk-1T-5Sp"/>
+                        <outlet property="infoLabel" destination="icQ-Uj-SKX" id="Sf5-MA-gZ1"/>
+                    </connections>
                 </viewController>
                 <customObject id="rPt-NT-nkU" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="75" y="655"/>
+            <point key="canvasLocation" x="76" y="730"/>
         </scene>
     </scenes>
 </document>
