--- a/BChessMac/Base.lproj/Main.storyboard
+++ b/BChessMac/Base.lproj/Main.storyboard
@@ -282,26 +282,26 @@
             <objects>
                 <viewController id="XfG-lQ-9wD" customClass="ChessViewController" customModule="BChess" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" wantsLayer="YES" id="m2S-Jp-Qdl">
-                        <rect key="frame" x="0.0" y="0.0" width="591" height="341"/>
+                        <rect key="frame" x="0.0" y="0.0" width="852" height="563"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
                             <stackView distribution="fill" orientation="horizontal" alignment="centerY" spacing="0.0" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="a6M-pX-2Vm">
-                                <rect key="frame" x="0.0" y="22" width="591" height="319"/>
+                                <rect key="frame" x="0.0" y="0.0" width="852" height="563"/>
                                 <subviews>
                                     <customView translatesAutoresizingMaskIntoConstraints="NO" id="Q8S-Oy-e6A" customClass="BoardView" customModule="BChess" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="0.0" width="431" height="319"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="692" height="563"/>
                                     </customView>
                                     <scrollView borderType="none" autohidesScrollers="YES" horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" hasHorizontalScroller="NO" hasVerticalScroller="NO" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="40J-P2-23o">
-                                        <rect key="frame" x="431" y="1" width="160" height="318"/>
+                                        <rect key="frame" x="692" y="1" width="160" height="562"/>
                                         <clipView key="contentView" id="Wbl-vo-wge">
-                                            <rect key="frame" x="0.0" y="0.0" width="160" height="318"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="160" height="562"/>
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                             <subviews>
                                                 <textView editable="NO" selectable="NO" drawsBackground="NO" importsGraphics="NO" richText="NO" verticallyResizable="YES" usesFontPanel="YES" findStyle="panel" continuousSpellChecking="YES" usesRuler="YES" allowsNonContiguousLayout="YES" quoteSubstitution="YES" dashSubstitution="YES" spellingCorrection="YES" smartInsertDelete="YES" id="lqJ-o6-VhY">
-                                                    <rect key="frame" x="0.0" y="0.0" width="160" height="318"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="160" height="562"/>
                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                                    <size key="minSize" width="160" height="318"/>
+                                                    <size key="minSize" width="160" height="562"/>
                                                     <size key="maxSize" width="463" height="10000000"/>
                                                     <attributedString key="textStorage">
                                                         <fragment content="PGN Representation here">
@@ -343,42 +343,24 @@
                                     <real value="3.4028234663852886e+38"/>
                                 </customSpacing>
                             </stackView>
-                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" textCompletion="NO" translatesAutoresizingMaskIntoConstraints="NO" id="icQ-Uj-SKX">
-                                <rect key="frame" x="2" y="4" width="587" height="17"/>
-                                <textFieldCell key="cell" lineBreakMode="truncatingTail" allowsUndo="NO" sendsActionOnEndEditing="YES" title="Ready" id="OFN-5h-BpI">
-                                    <font key="font" metaFont="system"/>
-                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
-                                    <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
-                                </textFieldCell>
-                            </textField>
-                            <box verticalHuggingPriority="750" boxType="separator" translatesAutoresizingMaskIntoConstraints="NO" id="bTG-oh-LkD">
-                                <rect key="frame" x="0.0" y="19" width="591" height="5"/>
-                            </box>
                         </subviews>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="a6M-pX-2Vm" secondAttribute="trailing" id="DNV-Ae-QJj"/>
-                            <constraint firstItem="icQ-Uj-SKX" firstAttribute="top" secondItem="bTG-oh-LkD" secondAttribute="bottom" id="Iup-fg-Bcm"/>
-                            <constraint firstItem="icQ-Uj-SKX" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" constant="4" id="UqJ-NW-UfW"/>
+                            <constraint firstItem="a6M-pX-2Vm" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" id="I6x-wR-jxK"/>
                             <constraint firstItem="a6M-pX-2Vm" firstAttribute="top" secondItem="m2S-Jp-Qdl" secondAttribute="top" id="k54-Gj-NB5"/>
-                            <constraint firstItem="a6M-pX-2Vm" firstAttribute="leading" secondItem="bTG-oh-LkD" secondAttribute="leading" id="p5G-Rp-YVG"/>
-                            <constraint firstItem="bTG-oh-LkD" firstAttribute="top" secondItem="a6M-pX-2Vm" secondAttribute="bottom" id="q3r-Ur-kta"/>
-                            <constraint firstAttribute="trailing" secondItem="bTG-oh-LkD" secondAttribute="trailing" id="rL8-g8-3Ag"/>
-                            <constraint firstItem="bTG-oh-LkD" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" id="rlS-4a-teG"/>
-                            <constraint firstAttribute="bottom" secondItem="icQ-Uj-SKX" secondAttribute="bottom" constant="4" id="sbn-kp-jZm"/>
-                            <constraint firstAttribute="trailing" secondItem="icQ-Uj-SKX" secondAttribute="trailing" constant="4" id="yJW-oZ-lhG"/>
+                            <constraint firstAttribute="bottom" secondItem="a6M-pX-2Vm" secondAttribute="bottom" id="naQ-j4-Erc"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="chessView" destination="Q8S-Oy-e6A" id="sQk-1T-5Sp"/>
                         <outlet property="gameInfoScrollView" destination="40J-P2-23o" id="jJy-QF-BKU"/>
                         <outlet property="gameInfoTextView" destination="lqJ-o6-VhY" id="dbz-3g-oet"/>
-                        <outlet property="infoLabel" destination="icQ-Uj-SKX" id="Sf5-MA-gZ1"/>
                         <outlet property="stackView" destination="a6M-pX-2Vm" id="VSw-e5-4tS"/>
                     </connections>
                 </viewController>
                 <customObject id="rPt-NT-nkU" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="75.5" y="729.5"/>
+            <point key="canvasLocation" x="75" y="987"/>
         </scene>
     </scenes>
 </document>
